--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Twitinerary</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}stylesheets/main.css" />
     <script type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascript/notifier.js"></script>
-    <script type="text/javascript" src="/javascript/main.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/notifier.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/main.js"></script>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
 
     <h1>Twitinerary</h1>
 
-    <form id="new-tweet" action="/tweets/new" method="post">
+    <form id="new-tweet" action="/tweets/new/" method="post">
       <ol>
         <li>
           <p>Enter your Twitter username and password.</p>
