--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     {% if not request.session.user %}
       <li>
         <p>Enter your Twitter username and password.</p>
-        <p><input name="username" type="text" }value="ienjoytesting" />
+        <p><input name="username" type="text"     value="ienjoytesting" />
            <input name="password" type="password" value="happypants" /></p>
       </li>
     {% endif %}
