--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
     <p>
     {% if request.session.user %}
       Logged in as {{ request.session.user|default:"nobody" }}.
-      <a href="{% url twitinerary.views.logout %}">Log out</a>.
+      (<a href="{% url twitinerary.views.logout %}">Log out</a>)
+      (<a href="{% url twitinerary.views.review %}">Review Tweets</a>)
     {% else %}
       Not logged in.
     {% endif %}
