Ability to delete Tweets.

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
       <input id="dismiss-notification" type="button" value="OK" />
     </div>
 
-    <h1>Twitinerary</h1>
+    <h1><a href="{% url twitinerary.views.home %}">Twitinerary</a></h1>
 
     <p>
     {% if request.session.user %}
