--- a/templates/review.html
+++ b/templates/review.html
@@ -3,7 +3,16 @@
   <table>
     <tr><th>Time</th><th>Tweet</th></tr>
   {% for tweet in tweets %}
-    <tr><td>{{ tweet.datetime }}</td><td>{{ tweet.tweet }}</td></tr>
+    <tr>
+      <td>{{ tweet.datetime }}</td>
+      <td>
+        {{ tweet.tweet }}
+        <form action="{% url twitinerary.views.delete %}" method="post">
+          <input name="key" type="hidden" value="{{ tweet.key }}" />
+          <input type="submit" value="Delete" />
+        </form>
+      </td>
+    </tr>
   {% endfor %}
   </table>
 {% endblock %}
