Abstracted user into its model. Fixed bug where Tweeting while being logged in would produce exception.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
     <p>
     {% if request.session.user %}
-      Logged in as {{ request.session.user|default:"nobody" }}.
+      Logged in as {{ request.session.user.username }}.
       (<a href="{% url twitinerary.views.logout %}">Log out</a>)
       (<a href="{% url twitinerary.views.review %}">Review Tweets</a>)
     {% else %}
