--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,8 @@
     <h1><a href="{% url twitinerary.views.home %}">Twitinerary</a></h1>
 
     <p>
-    {% if request.session.user %}
-      Logged in as {{ request.session.user.username }}.
+    {% if request.user.is_authenticated %}
+      Logged in as {{ request.user.username }}.
       (<a href="{% url twitinerary.views.logout %}">Log out</a>)
       (<a href="{% url twitinerary.views.review %}">Review Tweets</a>)
     {% else %}
