--- a/templates/review.html
+++ b/templates/review.html
@@ -5,7 +5,7 @@
       <tr><th>Time</th><th>Tweet</th></tr>
     {% for tweet in tweets %}
       <tr>
-        <td>{{ tweet.datetime }}</td>
+        <td>{{ tweet.post_at }}</td>
         <td>
           {{ tweet.tweet }}
           <form action="{% url twitinerary.views.delete %}" method="post">
