--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -19,11 +19,11 @@
 
     <p>
     {% if request.user.is_authenticated %}
-      Logged in as {{ request.user.username }}.
-      (<a href="{% url twitinerary.views.user.logout %}">Log out</a>)
+      Signed in as {{ request.user.username }}.
+      (<a href="{% url twitinerary.views.user.logout %}">Sign out</a>)
       (<a href="{% url twitinerary.views.tweets.view %}">Review Tweets</a>)
     {% else %}
-      Not logged in.
+      Not signed in.
     {% endif %}
     </p>
     
