--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -19,7 +19,7 @@
 
     <p>
     {% if request.user.is_authenticated %}
-      Signed in as {{ request.user.username }}.
+      Signed in as @{{ request.user.username }}.
       (<a href="{% url twitinerary.views.user.logout %}">Sign out</a>)
       (<a href="{% url twitinerary.views.tweets.view %}">Review Tweets</a>)
     {% else %}
