--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Twitinerary</title>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}stylesheets/main.css" />
     <script type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/notifier.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/main.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweeter.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init.js"></script>
   </head>
 
   <body>
