--- a/twitinerary/templates/index.html
+++ b/twitinerary/templates/index.html
@@ -34,6 +34,10 @@
       </ol>
       <p><input type="submit" value="Schedule it!" /></p>
     </form>
+
+    <form id="url-shortener">
+      <input type="text" id="long-url" value="URL to shorten ..." /><input type="submit" value="Shorten URL" />
+    </form>
   {% endif %}
 
   <ul>
