Added URL shortening via Bit.ly.

--- a/twitinerary/templates/index.html
+++ b/twitinerary/templates/index.html
@@ -36,7 +36,7 @@
     </form>
 
     <form id="url-shortener">
-      <input type="text" id="long-url" value="URL to shorten ..." /><input type="submit" value="Shorten URL" />
+      <input type="text" name="long_url" value="URL to shorten ..." /><input type="submit" value="Shorten URL" />
     </form>
   {% endif %}
 
