Implemented basic input validation for time.

--- a/twitinerary/templates/index.html
+++ b/twitinerary/templates/index.html
@@ -21,8 +21,8 @@
             {% endfor %}
             </select>
             at
-            <input name="hour" type="text" value="8" size="2" />:<input name="minute"
-              type="text" value="00" size="2">
+            <input name="hour" type="text" value="8" size="2" maxlength="2" />:<input name="minute"
+              type="text" value="00" size="2" maxlength="2" />
             <select name="period">
               <option value="am">a.m.</option>
               <option value="pm">p.m.</option>
