--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -8,6 +8,7 @@
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/notifier.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/url_shortener.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/image_uploader.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweeter.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init.js"></script>
   </head>
