--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -24,7 +24,7 @@
     <p>
     {% if request.user.is_authenticated %}
       Signed in as @{{ request.user.username }}.
-      (<a href="{% url twitinerary.views.user.logout %}">Sign out</a>)
+      (<a href="{% url twitinerary.views.oauth.sign_out %}">Sign out</a>)
       (<a href="{% url twitinerary.views.tweets.view %}">Review Tweets</a>)
     {% else %}
       Not signed in.
