--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}stylesheets/main.css" />
     <script type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/jquery_extensions.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/notifier.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/url_shortener.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/image_uploader.js"></script>
