--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -25,7 +25,8 @@
 
     <p>
     {% if request.user.is_authenticated %}
-      Signed in as @{{ request.user.username }}.
+    Signed in as <a
+      href="http://twitter.com/{{ request.user.username|iriencode }}"> @{{ request.user.username }}</a>.
       (<a href="{% url twitinerary.views.oauth.sign_out %}">Sign out</a>)
       (<a href="{% url twitinerary.views.tweets.view %}">Review Tweets</a>)
     {% else %}
