Added calendar for choosing "another day".

--- a/twitinerary/templates/index.html
+++ b/twitinerary/templates/index.html
@@ -15,11 +15,11 @@
         <li>
           <p>When do you want it posted?</p>
           <p>
-            <div id="date-picker">
+            <div id="day-chooser">
               <input name="today" type="button" value="Today" />
               <input name="tomorrow" type="button" value="Tomorrow" />
               <input name="another_day" type="button" value="Another day" />
-              <p id="date-notifier"></p>
+              <div id="date-picker-calendar"></div>
             </div>
             at
             <input name="hours" type="text" value="8" size="2" maxlength="2" />:<input name="minutes"
