--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -3,9 +3,15 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Twitinerary</title>
+
     <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}stylesheets/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen"
+      href="{{ MEDIA_URL }}stylesheets/jquery-ui/ui-lightness/jquery-ui-1.7.2.custom.css" />
+
     <script type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/jquery.cookie.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/jquery_extensions.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/notifier.js"></script>
