--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/url_shortener.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/image_uploader.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweeter.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/datetime_humanizer.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init.js"></script>
   </head>
 
