--- a/twitinerary/templates/index.html
+++ b/twitinerary/templates/index.html
@@ -7,9 +7,9 @@
   {% else %}
     <div id="tabs">
       <ul>
-        <li><a id="schedule_tweet"
+        <li><a id="schedule_tweet_tab" title="Schedule new Tweet"
           href="{% url twitinerary.views.tweets.schedule_tweet %}">Schedule new Tweet</a></li>
-        <li><a id="view_tweets"
+        <li><a id="view_tweets_tab" title="View Tweets"
           href="{% url twitinerary.views.tweets.view %}">View Tweets</a></li>
       </ul>
     </div>
