Reorganized and renamed various components to allow for beginnings of "edit scheduled Tweets" support.

--- a/twitinerary/templates/home.html
+++ b/twitinerary/templates/home.html
@@ -7,8 +7,8 @@
   {% else %}
     <div id="tabs">
       <ul>
-        <li><a id="schedule_tweet_tab" title="Schedule new Tweet"
-          href="{% url twitinerary.views.tweets.schedule_tweet %}">Schedule new Tweet</a></li>
+        <li><a id="new_tweet_tab" title="Schedule new Tweet"
+          href="{% url twitinerary.views.tweets.new %}">Schedule new Tweet</a></li>
         <li><a id="view_tweets_tab" title="View Tweets"
           href="{% url twitinerary.views.tweets.view %}">View Tweets</a></li>
       </ul>
