--- a/twitinerary/templates/view_tweets.html
+++ b/twitinerary/templates/view_tweets.html
@@ -6,6 +6,10 @@
       <td><span class="datetime">{{ tweet.post_at|date:"U" }}</span></td>
       <td>
         {{ tweet.tweet }}
+        <form class="tweet-editor" action="{% url twitinerary.views.tweets.edit %}" method="get">
+          <input name="key" type="hidden" value="{{ tweet.key }}" />
+          <input type="submit" value="Edit" />
+        </form>
         <form class="tweet-deleter" action="{% url twitinerary.views.tweets.delete %}" method="post">
           <input name="key" type="hidden" value="{{ tweet.key }}" />
           <input type="submit" value="Delete" />
