Added cancel button to "Edit Tweet" tab. Fixed "Edit Tweet" tab not closing after submitting.

--- a/twitinerary/templates/edit_tweet.html
+++ b/twitinerary/templates/edit_tweet.html
@@ -1,4 +1,4 @@
 {% extends "tweet_editor.html" %}
 {% block tweet_form_postamble %}
-  <p><input type="submit" value="Edit it!" /></p>
+  <p><input type="submit" value="Edit it!" /> <input type="button" name="cancel" value="Cancel" /></p>
 {% endblock %}
