--- a/twitinerary/templates/tweet_editor.html
+++ b/twitinerary/templates/tweet_editor.html
@@ -15,15 +15,15 @@
           <div class="date-picker-calendar"></div>
         </div>
         at
-        <input name="hours" type="text" value="8" size="2" maxlength="2" />:<input
-          name="minutes" type="text" value="00" size="2" maxlength="2" />
+        <input name="hours" type="text" size="2" maxlength="2" />:<input
+          name="minutes" type="text" size="2" maxlength="2" />
         <select name="period">
           <option value="am">a.m.</option>
           <option value="pm">p.m.</option>
         </select>
 
         {# post_at calculated dynamically via Javascript prior to form submission. #}
-        <input name="post_at" type="hidden" value="{{ tweet.post_at }}" />
+        <input name="post_at" type="hidden" value="{{ tweet.post_at|date:"U" }}" />
       </p>
     </li>
   </ol>
