--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/image_uploader.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweeter.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweet_viewer.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweet_state.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweet_edit_state.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/datetime_humanizer.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init.js"></script>
   </head>
