--- a/twitinerary/templates/base.html
+++ b/twitinerary/templates/base.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweet_viewer.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/tweet_edit_state.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/datetime_humanizer.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/most_recent_tweet_display.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}javascripts/init.js"></script>
   </head>
 
