--- a/media/stylesheets/main.css
+++ b/media/stylesheets/main.css
@@ -21,5 +21,19 @@
 }
 
 .explanation {
-  border: 2px solid red;
+  border: 1px solid red;
+}
+
+/* Default CSS for plugin: http://craigsworks.com/projects/simpletip */
+.tooltip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  display: none;
+
+  color: #303030;
+  background-color: #f5f5b5;
+  border: 1px solid #deca7e;
+  padding: 10px 13px;
 }
