Ensure time is Unix timestamp before converting to human-readable time.

--- a/twitinerary/templates/_next_scheduled_tweet.html
+++ b/twitinerary/templates/_next_scheduled_tweet.html
@@ -1,2 +1,2 @@
-{{ tweet.tweet|urlize }} in <span class="next-tweet-datetime">{{ tweet.post_at|date:"U" }}</span>.
+{{ tweet.tweet|urlize }} in <span class="datetime">{{ tweet.post_at|date:"U" }}</span>.
 {% include "_tweet_manipulators.html" %}
