Fixed Tweet character counter not properly resetting after submitting Tweet.

--- a/twitinerary/templates/tweet_editor.html
+++ b/twitinerary/templates/tweet_editor.html
@@ -3,7 +3,7 @@
     <li>
       <p>Enter your Tweet.</p>
       <textarea name="tweet" cols="40" rows="2">{{ tweet.tweet }}</textarea>
-      <span class="tweet-char-counter">140</span>
+      <span class="tweet-char-counter"></span>
     </li>
 
     <li>
